--- a/src/now-animated-text/dev.pug
+++ b/src/now-animated-text/dev.pug
@@ -1,8 +1,15 @@
+- const WORD = "Jhey Tompkins"
 .text-grid
+  .avatar-ring
+    img(src="https://assets.codepen.io/605876/me--noticing.png")
+    img(src="https://assets.codepen.io/605876/me--standing.png")
   - let t = 0
   while t < 51
     if (t === 25)
-      h1.text-grid__main(data-splitting="") Jhey Tompkins!
+      h1.text-grid__main(data-splitting="")= WORD
     else
-      h1(aria-hidden="true") Jhey Tompkins!
+      h1(aria-hidden="true")= WORD
     - t++
+button
+  svg(viewBox="0 0 512 512" title="restart")
+    path(d="M500.33 0h-47.41a12 12 0 0 0-12 12.57l4 82.76A247.42 247.42 0 0 0 256 8C119.34 8 7.9 119.53 8 256.19 8.1 393.07 119.1 504 256 504a247.1 247.1 0 0 0 166.18-63.91 12 12 0 0 0 .48-17.43l-34-34a12 12 0 0 0-16.38-.55A176 176 0 1 1 402.1 157.8l-101.53-4.87a12 12 0 0 0-12.57 12v47.41a12 12 0 0 0 12 12h200.33a12 12 0 0 0 12-12V12a12 12 0 0 0-12-12z")
