--- a/src/now-animated-text/style.styl
+++ b/src/now-animated-text/style.styl
@@ -3,6 +3,11 @@
 *
   box-sizing border-box
 
+:root
+  --stroke hsl(0, 0%, 50%)
+  --shadow-5 'hsl(%s, 70%, 52%, 0.5)' % var(--hue, 10)
+  --shadow-75 'hsl(%s, 70%, 52%, 0.75)' % var(--hue, 10)
+
 body
   font-family 'Nunito', sans-serif
   min-height 100vh
@@ -11,12 +16,12 @@ body
   background hsl(0, 10%, 10%)
 
 h1
-  --stroke hsl(0, 0%, 50%)
   margin 0
   white-space nowrap
   font-size clamp(2rem, 10vmin, 5rem)
   line-height 0.8
   color transparent
+  z-index -1
 
 [aria-hidden]
   -webkit-text-stroke 2px var(--stroke)
@@ -25,6 +30,7 @@ h1
 
 .char
   -webkit-text-stroke 2px var(--stroke)
+  display inline-block
 
 .text-grid
   display grid
@@ -33,4 +39,77 @@ h1
   position fixed
   top 50%
   left 50%
-  transform translate(-50%, -50%)
+  transform translate(-50%, -45%)
+
+  &__main
+    z-index 2
+
+    .char
+      --drop 0
+      will-change filter
+
+      &--on
+        filter drop-shadow(0 calc(var(--drop, 0) * -2.5px) calc(var(--drop, 0) * 2.5px) hsl(0, 10%, 0%)) drop-shadow(0 0 calc(var(--drop, 0) * 5px) var(--shadow-5)) drop-shadow(0 0 calc(var(--drop, 0) * 10px) var(--shadow-5)) drop-shadow(0 0 calc(var(--drop, 0) * 0.5px) var(--shadow-75)) brightness(calc(1 + (var(--drop) * 0.2)))
+
+.avatar-ring
+  position absolute
+  top 50%
+  left 50%
+  width 50vmin
+  height 50vmin
+  max-width 280px
+  max-height 280px
+  border 10px solid var(--stroke)
+  border-radius 50%
+  background 'hsl(%s, 30%, 20%)' % var(--hue)
+  transform translate(-50%, -80%) scale(0)
+  overflow hidden
+
+  &:after
+    content ''
+    height 100%
+    width 100%
+    // background hsla(0, 0%, 0%, 0.45)
+    position absolute
+    top 65%
+    left 50%
+    transform translate(-50%, 0%)
+
+  img
+    position absolute
+    top 50%
+    left 50%
+    width 150%
+    transform translate(-50%, -50%)
+    filter grayscale(0)
+
+  &:hover img:nth-of-type(2)
+    display none
+
+button
+  height 48px
+  width 48px
+  position fixed
+  right 1rem
+  bottom 1rem
+  appearance none
+  border none
+  background transparent
+  transition transform 0.2s
+  outline transparent
+
+  &:active
+    transform scale(0.75)
+
+  svg
+    height 2rem
+    width 2rem
+    fill white
+
+.char--on
+  animation flicker 1s infinite
+
+@keyframes flicker
+  50%
+    --drop 0 !important
+    --stroke black !important
