--- a/src/monochromatic-hsl-palette/index.pug
+++ b/src/monochromatic-hsl-palette/index.pug
@@ -11,4 +11,5 @@ html
     include dev.pug
     script(src="https://code.jquery.com/jquery-1.12.4.js")
     script(src="https://code.jquery.com/ui/1.12.1/jquery-ui.js")
+    script(src="https://assets.codepen.io/605876/prism.js")
     script(type="module" src="script.js")
