--- a/src/monochromatic-hsl-palette/style.styl
+++ b/src/monochromatic-hsl-palette/style.styl
@@ -33,8 +33,9 @@ pre[class*="language-"] {
 /* Code blocks */
 pre[class*="language-"] {
   padding: 2rem;
-  margin: .5em 0;
+  margin: 0;
   overflow: auto;
+  outline: transparent;
 }
 
 :not(pre) > code[class*="language-"],
@@ -241,15 +242,15 @@ div.code-toolbar > .toolbar button {
 }
 
 div.code-toolbar > .toolbar a,
-div.code-toolbar > .toolbar button,
-div.code-toolbar > .toolbar span {
+div.code-toolbar > .toolbar button {
   color: #bbb;
-  font-size: .8em;
-  padding: 0 .5em;
-  background: #f5f2f0;
-  background: rgba(224, 224, 224, 0.2);
-  box-shadow: 0 2px 0 0 rgba(0,0,0,0.2);
+  font-size: 1rem;
+  padding: 0.5rem;
+  font-family: sans-serif;
+  background: hsl(0, 0%, 25%);
   border-radius: .5em;
+  outline: transparent;
+  cursor: pointer;
 }
 
 div.code-toolbar > .toolbar a:hover,
@@ -258,7 +259,7 @@ div.code-toolbar > .toolbar button:hover,
 div.code-toolbar > .toolbar button:focus,
 div.code-toolbar > .toolbar span:hover,
 div.code-toolbar > .toolbar span:focus {
-  color: inherit;
+  background: hsl(0, 0%, 40%);
   text-decoration: none;
 }
 
@@ -272,11 +273,51 @@ body {
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  background: hsl(0, 0%, 98%);
 }
 
 #hue,
 #saturation,
 #lightness {
   width: 200px;
-  margin-top: 1rem;
+}
+
+label {
+  font-family: sans-serif;
+  font-weight: bold;
+  color: hsl(0, 0%, 10%);
+}
+
+.controls {
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-template-rows: auto auto auto;
+  align-items: center;
+  grid-gap: 1rem 1rem;
+}
+
+.result {
+  display: grid;
+  grid-template-columns: 1fr auto;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 2rem 3rem -2rem hsl(0, 0%, 10%);
+  margin-bottom: 3rem;
+}
+
+.palette {
+  display: grid;
+  grid-template-rows: repeat(8, 1fr);
+  height: 100%;
+}
+
+.palette__shade {
+  background: var(--shade, var(--shade-one));
+  width: 41px;
+}
+
+.ui-slider-handle {
+  border-radius: 50% !important;
+  outline: transparent !important;
+  background: var(--shade-2) !important;
 }
