--- a/src/cover-flow-gsap/index.pug
+++ b/src/cover-flow-gsap/index.pug
@@ -2,14 +2,10 @@ html
   head
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
-    title monochromatic-hsl-palette
+    title cover-flow-gsap
     meta(name="viewport", content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1.0")
     link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css')
-    link(rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css")
     link(rel='stylesheet', href='style.css')
   body
     include dev.pug
-    script(src="https://code.jquery.com/jquery-1.12.4.js")
-    script(src="https://code.jquery.com/ui/1.12.1/jquery-ui.js")
-    script(src="https://assets.codepen.io/605876/prism.js")
     script(type="module" src="script.js")
