feat: cover flow infinite fixes

--- a/src/cover-flow-gsap/style.styl
+++ b/src/cover-flow-gsap/style.styl
@@ -14,6 +14,10 @@ body
   overflow-y hidden
   background var(--bg)
 
+.drag-proxy
+  visibility hidden
+  position absolute
+
 .controls
   position absolute
   top 50%
