--- a/src/3d-helicopter/style.styl
+++ b/src/3d-helicopter/style.styl
@@ -58,35 +58,46 @@
   transition background 0.25s
 
 :root
-  --dark 0
   --base-size 20
   --helicopter-height calc(var(--base-size) * 1vmin)
   --helicopter-width calc(var(--helicopter-height) * 2)
-  --helicopter-one hsl(0, 0%, 95%)
-  --helicopter-two hsl(0, 0%, 90%)
-  --helicopter-three hsl(0, 0%, 85%)
-  --helicopter-four hsl(0, 0%, 80%)
-  --chair-one hsl(0, 0%, 35%)
-  --chair-two hsl(0, 0%, 30%)
-  --chair-three hsl(0, 0%, 25%)
-  --chair-four hsl(0, 0%, 20%)
-  --dash-one hsl(0, 0%, 65%)
-  --dash-two hsl(0, 0%, 60%)
-  --dash-three hsl(0, 0%, 55%)
-  --dash-four hsl(0, 0%, 50%)
-  --accent-one hsl(10, 60%, 65%)
-  --accent-two hsl(10, 60%, 60%)
-  --accent-three hsl(10, 60%, 55%)
-  --accent-four hsl(10, 60%, 50%)
-  --rocket-one hsl(1, 60%, 45%)
-  --rocket-two hsl(1, 60%, 40%)
-  --rocket-three hsl(1, 60%, 35%)
-  --rocket-four hsl(1, 60%, 30%)
-  --screen-one hsla(210, 80%, 50%, 0.45)
-  --screen-two hsla(210, 80%, 50%, 0.4)
-  --screen-three hsla(210, 80%, 50%, 0.35)
-  --screen-four hsla(210, 80%, 50%, 0.35)
-  --bg hsl(210, 80%, 90%)
+  --helicopter-one 'hsl(0, 0%, %s)' % calc((60 + (var(--on, 0) * 35)) * 1%)
+  --helicopter-two 'hsl(0, 0%, %s)' % calc((55 + (var(--on, 0) * 35)) * 1%)
+  --helicopter-three 'hsl(0, 0%, %s)' % calc((50 + (var(--on, 0) * 35)) * 1%)
+  --helicopter-four 'hsl(0, 0%, %s)' % calc((40 + (var(--on, 0) * 35)) * 1%)
+  --chair-one 'hsl(0, 0%, %s)' % calc((20 + (var(--on, 0) * 15)) * 1%)
+  --chair-two 'hsl(0, 0%, %s)' % calc((15 + (var(--on, 0) * 15)) * 1%)
+  --chair-three 'hsl(0, 0%, %s)' % calc((10 + (var(--on, 0) * 15)) * 1%)
+  --chair-four 'hsl(0, 0%, %s)' % calc((5 + (var(--on, 0) * 15)) * 1%)
+  --dash-one 'hsl(0, 0%, %s)' % calc((50 + (var(--on, 0) * 15)) * 1%)
+  --dash-two 'hsl(0, 0%, %s)' % calc((45 + (var(--on, 0) * 15)) * 1%)
+  --dash-three 'hsl(0, 0%, %s)' % calc((40 + (var(--on, 0) * 15)) * 1%)
+  --dash-four 'hsl(0, 0%, %s)' % calc((35 + (var(--on, 0) * 15)) * 1%)
+  // --chair-one hsl(0, 0%, 35%)
+  // --chair-two hsl(0, 0%, 30%)
+  // --chair-three hsl(0, 0%, 25%)
+  // --chair-four hsl(0, 0%, 20%)
+  // --dash-one hsl(0, 0%, 65%)
+  // --dash-two hsl(0, 0%, 60%)
+  // --dash-three hsl(0, 0%, 55%)
+  // --dash-four hsl(0, 0%, 50%)
+  --accent-one 'hsl(10, 60%, %s)' % calc((30 + (var(--on, 0) * 35)) * 1%)
+  --accent-two 'hsl(10, 60%, %s)' % calc((25 + (var(--on, 0) * 35)) * 1%)
+  --accent-three 'hsl(10, 60%, %s)' % calc((20 + (var(--on, 0) * 35)) * 1%)
+  --accent-four 'hsl(10, 60%, %s)' % calc((15 + (var(--on, 0) * 35)) * 1%)
+  --rocket-one 'hsl(1, 60%, %s)' % calc((20 + (var(--on, 0) * 25)) * 1%)
+  --rocket-two 'hsl(1, 60%, %s)' % calc((15 + (var(--on, 0) * 25)) * 1%)
+  --rocket-three 'hsl(1, 60%, %s)' % calc((10 + (var(--on, 0) * 25)) * 1%)
+  --rocket-four 'hsl(1, 60%, %s)' % calc((5 + (var(--on, 0) * 25)) * 1%)
+  --screen-one 'hsla(210, 80%, %s, 0.45)' % calc((25 + (var(--on, 0) * 25)) * 1%)
+  --screen-two 'hsla(210, 80%, %s, 0.4)' % calc((25 + (var(--on, 0) * 25)) * 1%)
+  --screen-three 'hsla(210, 80%, %s, 0.35)' % calc((25 + (var(--on, 0) * 25)) * 1%)
+  --screen-four 'hsla(210, 80%, %s, 0.35)' % calc((25 + (var(--on, 0) * 25)) * 1%)
+  // --screen-one hsla(210, 80%, 50%, 0.45)
+  // --screen-two hsla(210, 80%, 50%, 0.4)
+  // --screen-three hsla(210, 80%, 50%, 0.35)
+  // --screen-four hsla(210, 80%, 50%, 0.35)
+  --bg 'hsl(210, 80%, %s)' % (calc((15 + (var(--on, 0) * 75)) * 1%))
 
 body
   min-height 100vh
@@ -94,6 +105,7 @@ body
   place-items center
   background var(--bg)
   overflow hidden
+  touch-action none
 
 .scene
   position fixed
@@ -132,6 +144,36 @@ body
     @keyframes float
       50%
         transform translate(-50%, -65%)
+
+  &__base-light
+    --hue 20
+    bottom -6%
+    width 6%
+    height 6%
+    left 47%
+    position absolute
+
+  &__tail-light
+    --hue 15
+    top -20%
+    width 20%
+    height 20%
+    position absolute
+    left 65%
+
+  &__wing-light
+    --hue 90
+    --speed 0.4
+    top -50%
+    width 10%
+    height 50%
+    position absolute
+    left 45%
+
+    &--left
+      transform translate3d(0, 0, calc(var(--base-size) * 0.5vmin))
+    &--right
+      transform translate3d(0, 0, calc(var(--base-size) * -0.5vmin))
 
   & > *
     position absolute
@@ -536,6 +578,13 @@ body
     &:nth-of-type(4)
       background var(--rocket-three)
 
+.cuboid--light
+  --thickness calc(var(--base-size) * 0.035)
+  animation flash calc((1 - var(--on, 0)) * (var(--speed, 1) * 1s)) infinite
+
+  div
+    background 'hsla(%s, 90%, 50%, %s)' % (var(--hue, 10) var(--alpha, 0))
+
 @keyframes blades
   to
     transform translate(-50%, -50%) rotateX(90deg) translate3d(0, 0, 1px) rotate(-360deg)
@@ -553,3 +602,53 @@ body
 
   div
     background 'hsl(%s, 80%, 80%)' % var(--hue)
+
+button
+  height 48px
+  width 48px
+  position fixed
+  bottom 1rem
+  right 1rem
+  cursor pointer
+  transform translate3d(0, 0, 150vmin)
+  appearance none
+  border 0
+  background transparent
+  outline transparent
+
+  & > svg
+    position absolute
+    height 100%
+    width 100%
+    top 0
+    left 0
+
+  path
+    fill 'hsl(210, 80%, %s)' % calc((90 - (var(--on, 0) * 75)) * 1%)
+
+  svg:nth-of-type(1)
+  span:nth-of-type(1)
+    display none
+
+  span
+    position absolute
+    width 1px
+    height 1px
+    padding 0
+    margin -1px
+    overflow hidden
+    clip rect(0, 0, 0, 0)
+    white-space nowrap
+    border-width 0
+
+[aria-pressed="true"]
+  svg:nth-of-type(1)
+  span:nth-of-type(1)
+    display block
+  svg:nth-of-type(2)
+  span:nth-of-type(2)
+    display none
+
+@keyframes flash
+  50%
+    --alpha 1
