feat: zombie updates

--- a/src/CSS-3D-Squad-Car/style.styl
+++ b/src/CSS-3D-Squad-Car/style.styl
@@ -582,6 +582,10 @@ body
   height 100%
   width 100%
   overflow hidden
+  // --speed 0
+
+  // &:after
+  //   background-color hsla(210, 80%, 70%, 0.5) !important
 
   &--bottom
     transform translate3d(0, 0, -1px)
