--- a/src/minecraft-zombie/style.styl
+++ b/src/minecraft-zombie/style.styl
@@ -71,6 +71,47 @@ body
   --zombie-one hsl(100, 25%, 34%)
   --zombie-two hsl(100, 25%, 30%)
   --zombie-three hsl(100, 25%, 26%)
+  --z-1 hsl(104, 37%, 34%)
+  --z-2 hsl(104, 35%, 32%)
+  --z-3 hsl(99, 38%, 33%)
+  --z-4 hsl(108, 36%, 30%)
+  --z-5 hsl(105, 38%, 27%)
+  --z-6 hsl(106, 34%, 29%)
+  --z-7 hsl(104, 33%, 31%)
+  --z-8 hsl(103, 35%, 36%)
+  --z-9 hsl(101, 42%, 41%)
+  --z-10 hsl(102, 37%, 42%)
+  --z-11 hsl(103, 34%, 32%)
+  --z-12 hsl(102, 25%, 45%)
+  --z-13 hsl(101, 24%, 47%)
+  --z-14 hsl(97, 22%, 50%)
+  --z-15 hsl(96, 24%, 47%)
+  --z-16 hsl(100, 24%, 47%)
+  --z-17 hsl(98, 31%, 40%)
+  --z-18 hsl(101, 24%, 42%)
+  --z-19 hsl(98, 25%, 44%)
+  --z-20 hsl(96, 22%, 43%)
+  --z-21 hsl(98, 26%, 38%)
+  --z-22 hsl(99, 35%, 36%)
+  --z-23 hsl(93, 28%, 43%)
+  --z-24 hsl(99, 40%, 35%)
+  --z-25 hsl(98, 28%, 43%)
+  --z-26 hsl(92, 23%, 46%)
+  --z-27 hsl(95, 38%, 23%)
+  --z-28 hsl(99, 27%, 46%)
+  --z-29 hsl(101, 40%, 35%)
+  --z-30 hsl(103, 43%, 28%)
+  --z-31 hsl(100, 36%, 33%)
+  --z-32 hsl(100, 41%, 33%)
+  --z-33 hsl(101, 38%, 29%)
+  --z-34 hsl(91, 38%, 31%)
+  --z-35 hsl(103, 41%, 25%)
+  --z-36 hsl(102, 39%, 32%)
+  --z-37 hsl(100, 42%, 24%)
+  --z-38 hsl(101, 45%, 23%)
+  --z-39 hsl(100, 38%, 30%)
+  --z-40 hsl(101, 40%, 26%)
+
   --trouser-one hsl(244, 47%, 39%)
   --trouser-two hsl(244, 47%, 32%)
   --trouser-three hsl(244, 47%, 26%)
@@ -78,6 +119,115 @@ body
   --shoe-two hsl(0, 0%, 50%)
   --shoe-three hsl(0, 0%, 40%)
   --feature hsl(0, 0%, 10%)
+  --zombie-face linear-gradient(var(--z-1), var(--z-1)) 0 0 / 2vmin 2vmin,
+    linear-gradient(var(--z-2), var(--z-2)) 2vmin 0 / 2vmin 2vmin,
+    linear-gradient(var(--z-3), var(--z-3)) 4vmin 0 / 2vmin 2vmin,
+    linear-gradient(var(--z-4), var(--z-4)) 6vmin 0 / 2vmin 2vmin,
+    linear-gradient(var(--z-5), var(--z-5)) 8vmin 0 / 2vmin 2vmin,
+    linear-gradient(var(--z-6), var(--z-6)) 10vmin 0 / 2vmin 2vmin,
+    linear-gradient(var(--z-2), var(--z-2)) 12vmin 0 / 2vmin 2vmin,
+    linear-gradient(var(--z-7), var(--z-7)) 14vmin 0 / 2vmin 2vmin,
+
+    linear-gradient(var(--z-2), var(--z-2)) 0vmin 2vmin / 6vmin 2vmin,
+    linear-gradient(var(--z-8), var(--z-8)) 6vmin 2vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-9), var(--z-9)) 8vmin 2vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-10), var(--z-10)) 10vmin 2vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-11), var(--z-11)) 12vmin 2vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-4), var(--z-4)) 14vmin 2vmin / 2vmin 2vmin,
+
+    linear-gradient(var(--z-19), var(--z-12)) 2vmin 6vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-18), var(--z-18)) 0vmin 6vmin / 6vmin 2vmin,
+    linear-gradient(var(--z-20), var(--z-20)) 6vmin 6vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-21), var(--z-21)) 8vmin 6vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-15), var(--z-15)) 10vmin 6vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-22), var(--z-22)) 12vmin 6vmin / 4vmin 2vmin,
+
+    linear-gradient(var(--z-19), var(--z-19)) 0vmin 8vmin / 2vmin 2vmin,
+    linear-gradient(var(--feature), var(--feature)) 2vmin 8vmin / 4vmin 2vmin,
+    linear-gradient(var(--z-23), var(--z-23)) 6vmin 8vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-15), var(--z-15)) 8vmin 8vmin / 2vmin 2vmin,
+    linear-gradient(var(--feature), var(--feature)) 10vmin 8vmin / 4vmin 2vmin,
+    linear-gradient(var(--z-18), var(--z-18)) 14vmin 8vmin / 2vmin 2vmin,
+
+    linear-gradient(var(--z-24), var(--z-24)) 0vmin 10vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-25), var(--z-25)) 2vmin 10vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-26), var(--z-26)) 4vmin 10vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-27), var(--z-27)) 6vmin 10vmin / 4vmin 2vmin,
+    linear-gradient(var(--z-28), var(--z-28)) 10vmin 10vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-29), var(--z-29)) 12vmin 10vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-30), var(--z-30)) 14vmin 10vmin / 2vmin 2vmin,
+
+    linear-gradient(var(--z-31), var(--z-31)) 0vmin 12vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-32), var(--z-32)) 2vmin 12vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-33), var(--z-33)) 4vmin 12vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-34), var(--z-34)) 6vmin 12vmin / 4vmin 2vmin,
+    linear-gradient(var(--z-35), var(--z-35)) 10vmin 12vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-36), var(--z-36)) 12vmin 12vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-33), var(--z-33)) 14vmin 12vmin / 2vmin 2vmin,
+
+    linear-gradient(var(--z-37), var(--z-37)) 0vmin 14vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-38), var(--z-38)) 2vmin 14vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-33), var(--z-33)) 8vmin 14vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-35), var(--z-35)) 4vmin 14vmin / 8vmin 2vmin,
+    linear-gradient(var(--z-39), var(--z-39)) 12vmin 14vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-40), var(--z-40)) 14vmin 14vmin / 2vmin 2vmin,
+
+    var(--z-2)
+
+  --zombie-crown linear-gradient(var(--z-1), var(--z-1)) 0 0 / 2vmin 2vmin,
+    linear-gradient(var(--z-2), var(--z-2)) 2vmin 0 / 2vmin 2vmin,
+    linear-gradient(var(--z-3), var(--z-3)) 4vmin 0 / 2vmin 2vmin,
+    linear-gradient(var(--z-4), var(--z-4)) 6vmin 0 / 2vmin 2vmin,
+    linear-gradient(var(--z-5), var(--z-5)) 8vmin 0 / 2vmin 2vmin,
+    linear-gradient(var(--z-6), var(--z-6)) 10vmin 0 / 2vmin 2vmin,
+    linear-gradient(var(--z-2), var(--z-2)) 12vmin 0 / 2vmin 2vmin,
+    linear-gradient(var(--z-7), var(--z-7)) 14vmin 0 / 2vmin 2vmin,
+
+    linear-gradient(var(--z-2), var(--z-2)) 0vmin 2vmin / 6vmin 2vmin,
+    linear-gradient(var(--z-8), var(--z-8)) 6vmin 2vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-9), var(--z-9)) 8vmin 2vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-10), var(--z-10)) 10vmin 2vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-11), var(--z-11)) 12vmin 2vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-4), var(--z-4)) 14vmin 2vmin / 2vmin 2vmin,
+
+    linear-gradient(var(--z-19), var(--z-12)) 2vmin 6vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-18), var(--z-18)) 0vmin 6vmin / 6vmin 2vmin,
+    linear-gradient(var(--z-20), var(--z-20)) 6vmin 6vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-21), var(--z-21)) 8vmin 6vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-15), var(--z-15)) 10vmin 6vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-22), var(--z-22)) 12vmin 6vmin / 4vmin 2vmin,
+
+    linear-gradient(var(--z-19), var(--z-19)) 0vmin 8vmin / 2vmin 2vmin,
+    linear-gradient(var(--feature), var(--feature)) 2vmin 8vmin / 4vmin 2vmin,
+    linear-gradient(var(--z-23), var(--z-23)) 6vmin 8vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-15), var(--z-15)) 8vmin 8vmin / 2vmin 2vmin,
+    linear-gradient(var(--feature), var(--feature)) 10vmin 8vmin / 4vmin 2vmin,
+    linear-gradient(var(--z-18), var(--z-18)) 14vmin 8vmin / 2vmin 2vmin,
+
+    linear-gradient(var(--z-24), var(--z-24)) 0vmin 10vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-25), var(--z-25)) 2vmin 10vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-26), var(--z-26)) 4vmin 10vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-27), var(--z-27)) 6vmin 10vmin / 4vmin 2vmin,
+    linear-gradient(var(--z-28), var(--z-28)) 10vmin 10vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-29), var(--z-29)) 12vmin 10vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-30), var(--z-30)) 14vmin 10vmin / 2vmin 2vmin,
+
+    linear-gradient(var(--z-31), var(--z-31)) 0vmin 12vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-32), var(--z-32)) 2vmin 12vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-33), var(--z-33)) 4vmin 12vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-34), var(--z-34)) 6vmin 12vmin / 4vmin 2vmin,
+    linear-gradient(var(--z-35), var(--z-35)) 10vmin 12vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-36), var(--z-36)) 12vmin 12vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-33), var(--z-33)) 14vmin 12vmin / 2vmin 2vmin,
+
+    linear-gradient(var(--z-37), var(--z-37)) 0vmin 14vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-38), var(--z-38)) 2vmin 14vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-33), var(--z-33)) 8vmin 14vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-35), var(--z-35)) 4vmin 14vmin / 8vmin 2vmin,
+    linear-gradient(var(--z-39), var(--z-39)) 12vmin 14vmin / 2vmin 2vmin,
+  linear-gradient(var(--z-40), var(--z-40)) 14vmin 14vmin / 2vmin 2vmin,
+
+    var(--z-2)
 
 .scene
   position fixed
@@ -174,6 +324,14 @@ body
 
   div
     background blue
+
+    &:nth-of-type(5)
+      background var(--zombie-face)
+      background-repeat no-repeat
+
+  &:nth-of-type(5)
+      background var(--zombie-face)
+      background-repeat no-repeat
 
 .cuboid-torso
   --thickness 8
