--- a/src/minecraft-zombie/style.styl
+++ b/src/minecraft-zombie/style.styl
@@ -65,52 +65,69 @@ body
   --base-size 2vmin
   --width calc(16 * var(--base-size))
   --height calc(32 * var(--base-size))
-  --shirt-one hsl(179, 100%, 33%)
-  --shirt-two hsl(179, 100%, 30%)
-  --shirt-three hsl(179, 100%, 26%)
-  --zombie-one hsl(100, 25%, 34%)
-  --zombie-two hsl(100, 25%, 30%)
-  --zombie-three hsl(100, 25%, 26%)
-  --z-1 hsl(104, 37%, 34%)
-  --z-2 hsl(104, 35%, 32%)
-  --z-3 hsl(99, 38%, 33%)
-  --z-4 hsl(108, 36%, 30%)
-  --z-5 hsl(105, 38%, 27%)
-  --z-6 hsl(106, 34%, 29%)
-  --z-7 hsl(104, 33%, 31%)
-  --z-8 hsl(103, 35%, 36%)
-  --z-9 hsl(101, 42%, 41%)
-  --z-10 hsl(102, 37%, 42%)
-  --z-11 hsl(103, 34%, 32%)
-  --z-12 hsl(102, 25%, 45%)
-  --z-13 hsl(101, 24%, 47%)
-  --z-14 hsl(97, 22%, 50%)
-  --z-15 hsl(96, 24%, 47%)
-  --z-16 hsl(100, 24%, 47%)
-  --z-17 hsl(98, 31%, 40%)
-  --z-18 hsl(101, 24%, 42%)
-  --z-19 hsl(98, 25%, 44%)
-  --z-20 hsl(96, 22%, 43%)
-  --z-21 hsl(98, 26%, 38%)
-  --z-22 hsl(99, 35%, 36%)
-  --z-23 hsl(93, 28%, 43%)
-  --z-24 hsl(99, 40%, 35%)
-  --z-25 hsl(98, 28%, 43%)
-  --z-26 hsl(92, 23%, 46%)
-  --z-27 hsl(95, 38%, 23%)
-  --z-28 hsl(99, 27%, 46%)
-  --z-29 hsl(101, 40%, 35%)
-  --z-30 hsl(103, 43%, 28%)
-  --z-31 hsl(100, 36%, 33%)
-  --z-32 hsl(100, 41%, 33%)
-  --z-33 hsl(101, 38%, 29%)
-  --z-34 hsl(91, 38%, 31%)
-  --z-35 hsl(103, 41%, 25%)
-  --z-36 hsl(102, 39%, 32%)
-  --z-37 hsl(100, 42%, 24%)
-  --z-38 hsl(101, 45%, 23%)
-  --z-39 hsl(100, 38%, 30%)
-  --z-40 hsl(101, 40%, 26%)
+
+  --shirt-hue 180
+  --s-1 'hsl(%s, 77%, 39%)' % var(--shirt-hue)
+  --s-2 'hsl(%s, 78%, 35%)' % var(--shirt-hue)
+  --s-3 'hsl(%s, 77%, 37%)' % var(--shirt-hue)
+  --s-4 'hsl(%s, 78%, 34%)' % var(--shirt-hue)
+  --s-5 'hsl(%s, 84%, 23%)' % var(--shirt-hue)
+
+
+  --trouser-hue 210
+  --t-1 'hsl(%s, 47%, 44%)' % var(--trouser-hue)
+  --t-2 'hsl(%s, 47%, 36%)' % var(--trouser-hue)
+  --t-3 'hsl(%s, 48%, 30%)' % var(--trouser-hue)
+  --t-4 'hsl(%s, 55%, 54%)' % var(--trouser-hue)
+
+  --c-1 hsl(0, 0%, 42%)
+  --c-2 hsl(0, 0%, 25%)
+
+  --base-hue 100
+
+  --dirt 'hsl(%s, 23%, 25%)' % calc(var(--base-hue) - 10)
+  --z-1 'hsl(%s, 37%, 34%)' % calc(var(--base-hue) + 4)
+  --z-2 'hsl(%s, 35%, 32%)' % calc(var(--base-hue) + 4)
+  --z-3 'hsl(%s, 38%, 33%)' % calc(var(--base-hue) - 1)
+  --z-4 'hsl(%s, 36%, 30%)' % calc(var(--base-hue) + 8)
+  --z-5 'hsl(%s, 38%, 27%)' % calc(var(--base-hue) + 5)
+  --z-6 'hsl(%s, 34%, 29%)' % calc(var(--base-hue) + 6)
+  --z-7 'hsl(%s, 33%, 31%)' % calc(var(--base-hue) + 4)
+  --z-8 'hsl(%s, 35%, 36%)' % calc(var(--base-hue) + 3)
+  --z-9 'hsl(%s, 42%, 41%)' % calc(var(--base-hue) + 1)
+  --z-10 'hsl(%s, 37%, 42%)' % calc(var(--base-hue) + 2)
+  --z-11 'hsl(%s, 34%, 32%)' % calc(var(--base-hue) + 3)
+  --z-12 'hsl(%s, 25%, 45%)' % calc(var(--base-hue) + 2)
+  --z-13 'hsl(%s, 24%, 47%)' % calc(var(--base-hue) + 1)
+  --z-14 'hsl(%s, 22%, 50%)' % calc(var(--base-hue) - 3)
+  --z-15 'hsl(%s, 24%, 47%)' % calc(var(--base-hue) - 4)
+  --z-16 'hsl(%s, 24%, 47%)' % calc(var(--base-hue) + 0)
+  --z-17 'hsl(%s, 31%, 40%)' % calc(var(--base-hue) - 2)
+  --z-18 'hsl(%s, 24%, 42%)' % calc(var(--base-hue) + 1)
+  --z-19 'hsl(%s, 25%, 44%)' % calc(var(--base-hue) - 2)
+  --z-20 'hsl(%s, 22%, 43%)' % calc(var(--base-hue) - 4)
+  --z-21 'hsl(%s, 26%, 38%)' % calc(var(--base-hue) - 2)
+  --z-22 'hsl(%s, 35%, 36%)' % calc(var(--base-hue) - 1)
+  --z-23 'hsl(%s, 28%, 43%)' % calc(var(--base-hue) - 7)
+  --z-24 'hsl(%s, 40%, 35%)' % calc(var(--base-hue) - 1)
+  --z-25 'hsl(%s, 28%, 43%)' % calc(var(--base-hue) - 2)
+  --z-26 'hsl(%s, 23%, 46%)' % calc(var(--base-hue) - 8)
+  --z-27 'hsl(%s, 38%, 23%)' % calc(var(--base-hue) - 5)
+  --z-28 'hsl(%s, 27%, 46%)' % calc(var(--base-hue) - 1)
+  --z-29 'hsl(%s, 40%, 35%)' % calc(var(--base-hue) + 1)
+  --z-30 'hsl(%s, 43%, 28%)' % calc(var(--base-hue) + 3)
+  --z-31 'hsl(%s, 36%, 33%)' % calc(var(--base-hue) + 0)
+  --z-32 'hsl(%s, 41%, 33%)' % calc(var(--base-hue) + 0)
+  --z-33 'hsl(%s, 38%, 29%)' % calc(var(--base-hue) + 1)
+  --z-34 'hsl(%s, 38%, 31%)' % calc(var(--base-hue) - 9)
+  --z-35 'hsl(%s, 41%, 25%)' % calc(var(--base-hue) + 3)
+  --z-36 'hsl(%s, 39%, 32%)' % calc(var(--base-hue) + 2)
+  --z-37 'hsl(%s, 42%, 24%)' % calc(var(--base-hue) + 0)
+  --z-38 'hsl(%s, 45%, 23%)' % calc(var(--base-hue) + 1)
+  --z-39 'hsl(%s, 38%, 30%)' % calc(var(--base-hue) + 0)
+  --z-40 'hsl(%s, 40%, 26%)' % calc(var(--base-hue) + 1)
+  --z-41 'hsl(%s, 38%, 10%)' % calc(var(--base-hue) - 6)
+  --z-42 'hsl(%s, 38%, 15%)' % calc(var(--base-hue) - 6)
 
   --trouser-one hsl(244, 47%, 39%)
   --trouser-two hsl(244, 47%, 32%)
@@ -119,6 +136,7 @@ body
   --shoe-two hsl(0, 0%, 50%)
   --shoe-three hsl(0, 0%, 40%)
   --feature hsl(0, 0%, 10%)
+
   --zombie-face linear-gradient(var(--z-1), var(--z-1)) 0 0 / 2vmin 2vmin,
     linear-gradient(var(--z-2), var(--z-2)) 2vmin 0 / 2vmin 2vmin,
     linear-gradient(var(--z-3), var(--z-3)) 4vmin 0 / 2vmin 2vmin,
@@ -134,6 +152,15 @@ body
     linear-gradient(var(--z-10), var(--z-10)) 10vmin 2vmin / 2vmin 2vmin,
     linear-gradient(var(--z-11), var(--z-11)) 12vmin 2vmin / 2vmin 2vmin,
     linear-gradient(var(--z-4), var(--z-4)) 14vmin 2vmin / 2vmin 2vmin,
+
+    linear-gradient(var(--z-2), var(--z-2)) 0 4vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-12), var(--z-12)) 2vmin 4vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-13), var(--z-13)) 4vmin 4vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-14), var(--z-14)) 6vmin 4vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-15), var(--z-15)) 8vmin 4vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-16), var(--z-16)) 10vmin 4vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-17), var(--z-17)) 12vmin 4vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-8), var(--z-8)) 14vmin 4vmin / 2vmin 2vmin,
 
     linear-gradient(var(--z-19), var(--z-12)) 2vmin 6vmin / 2vmin 2vmin,
     linear-gradient(var(--z-18), var(--z-18)) 0vmin 6vmin / 6vmin 2vmin,
@@ -174,60 +201,130 @@ body
 
     var(--z-2)
 
-  --zombie-crown linear-gradient(var(--z-1), var(--z-1)) 0 0 / 2vmin 2vmin,
-    linear-gradient(var(--z-2), var(--z-2)) 2vmin 0 / 2vmin 2vmin,
-    linear-gradient(var(--z-3), var(--z-3)) 4vmin 0 / 2vmin 2vmin,
-    linear-gradient(var(--z-4), var(--z-4)) 6vmin 0 / 2vmin 2vmin,
-    linear-gradient(var(--z-5), var(--z-5)) 8vmin 0 / 2vmin 2vmin,
-    linear-gradient(var(--z-6), var(--z-6)) 10vmin 0 / 2vmin 2vmin,
-    linear-gradient(var(--z-2), var(--z-2)) 12vmin 0 / 2vmin 2vmin,
-    linear-gradient(var(--z-7), var(--z-7)) 14vmin 0 / 2vmin 2vmin,
+  --zombie-crown linear-gradient(var(--dirt), var(--dirt)) 14vmin 0 / 2vmin 2vmin,
+    linear-gradient(var(--z-35), var(--z-35)) 0 6vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-6), var(--z-6)) 6vmin 4vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-35), var(--z-35)) 6vmin 6vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-35), var(--z-35)) 2vmin 2vmin / 2vmin 2vmin,
+    linear-gradient(var(--dirt), var(--dirt)) 10vmin 12vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-35), var(--z-35)) 4vmin 0 / 2vmin 2vmin,
+    linear-gradient(var(--z-6), var(--z-6)) 2vmin 12vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-35), var(--z-35)) 6vmin 12vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-7), var(--z-7)) 8vmin 12vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-6), var(--z-6)) 4vmin 10vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-7), var(--z-7)) 2vmin 10vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-6), var(--z-6)) 6vmin 8vmin / 4vmin 2vmin,
+    linear-gradient(var(--z-6), var(--z-6)) 6vmin 8vmin / 2vmin 4vmin,
+    linear-gradient(var(--z-6), var(--z-6)) 10vmin 0 / 6vmin 6vmin,
+    linear-gradient(var(--z-7), var(--z-7)) 8vmin 0 / 2vmin 8vmin,
+    linear-gradient(var(--z-7), var(--z-7)) 4vmin 6vmin / 2vmin 4vmin,
+    linear-gradient(var(--z-7), var(--z-7)) 8vmin 6vmin / 4vmin 2vmin,
+    linear-gradient(var(--z-22), var(--z-22)) 2vmin 2vmin / 12vmin 12vmin,
+    var(--z-7)
 
-    linear-gradient(var(--z-2), var(--z-2)) 0vmin 2vmin / 6vmin 2vmin,
-    linear-gradient(var(--z-8), var(--z-8)) 6vmin 2vmin / 2vmin 2vmin,
-    linear-gradient(var(--z-9), var(--z-9)) 8vmin 2vmin / 2vmin 2vmin,
-    linear-gradient(var(--z-10), var(--z-10)) 10vmin 2vmin / 2vmin 2vmin,
-    linear-gradient(var(--z-11), var(--z-11)) 12vmin 2vmin / 2vmin 2vmin,
-    linear-gradient(var(--z-4), var(--z-4)) 14vmin 2vmin / 2vmin 2vmin,
+  --zombie-ear linear-gradient(var(--dirt), var(--dirt)) 12vmin 4vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-41), var(--z-41)) 8vmin 12vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-5), var(--z-5)) 10vmin 8vmin / 6vmin 4vmin,
+    linear-gradient(var(--z-27), var(--z-27)) 0vmin 12vmin / 2vmin 4vmin,
 
-    linear-gradient(var(--z-19), var(--z-12)) 2vmin 6vmin / 2vmin 2vmin,
-    linear-gradient(var(--z-18), var(--z-18)) 0vmin 6vmin / 6vmin 2vmin,
-    linear-gradient(var(--z-20), var(--z-20)) 6vmin 6vmin / 2vmin 2vmin,
-    linear-gradient(var(--z-21), var(--z-21)) 8vmin 6vmin / 2vmin 2vmin,
-    linear-gradient(var(--z-15), var(--z-15)) 10vmin 6vmin / 2vmin 2vmin,
-    linear-gradient(var(--z-22), var(--z-22)) 12vmin 6vmin / 4vmin 2vmin,
+    linear-gradient(var(--z-35), var(--z-35)) 8vmin 0vmin / 4vmin 4vmin,
+    linear-gradient(var(--z-33), var(--z-33)) 0vmin 0vmin / 4vmin 2vmin,
+    linear-gradient(var(--z-35), var(--z-35)) 6vmin 6vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-35), var(--z-35)) 2vmin 2vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-35), var(--z-35)) 4vmin 0 / 2vmin 2vmin,
+    linear-gradient(var(--z-6), var(--z-6)) 2vmin 12vmin / 2vmin 2vmin,
 
-    linear-gradient(var(--z-19), var(--z-19)) 0vmin 8vmin / 2vmin 2vmin,
-    linear-gradient(var(--feature), var(--feature)) 2vmin 8vmin / 4vmin 2vmin,
-    linear-gradient(var(--z-23), var(--z-23)) 6vmin 8vmin / 2vmin 2vmin,
-    linear-gradient(var(--z-15), var(--z-15)) 8vmin 8vmin / 2vmin 2vmin,
-    linear-gradient(var(--feature), var(--feature)) 10vmin 8vmin / 4vmin 2vmin,
-    linear-gradient(var(--z-18), var(--z-18)) 14vmin 8vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-2), var(--z-2)) 0 4vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-2), var(--z-2)) 2vmin 4vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-3), var(--z-3)) 4vmin 4vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-5), var(--z-5)) 6vmin 4vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-6), var(--z-6)) 8vmin 4vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-6), var(--z-6)) 10vmin 4vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-7), var(--z-7)) 12vmin 4vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-8), var(--z-8)) 14vmin 4vmin / 2vmin 2vmin,
 
-    linear-gradient(var(--z-24), var(--z-24)) 0vmin 10vmin / 2vmin 2vmin,
-    linear-gradient(var(--z-25), var(--z-25)) 2vmin 10vmin / 2vmin 2vmin,
-    linear-gradient(var(--z-26), var(--z-26)) 4vmin 10vmin / 2vmin 2vmin,
-    linear-gradient(var(--z-27), var(--z-27)) 6vmin 10vmin / 4vmin 2vmin,
-    linear-gradient(var(--z-28), var(--z-28)) 10vmin 10vmin / 2vmin 2vmin,
-    linear-gradient(var(--z-29), var(--z-29)) 12vmin 10vmin / 2vmin 2vmin,
-    linear-gradient(var(--z-30), var(--z-30)) 14vmin 10vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-4), var(--z-4)) 0 6vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-1), var(--z-1)) 2vmin 6vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-3), var(--z-3)) 4vmin 6vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-40), var(--z-40)) 6vmin 6vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-3), var(--z-3)) 8vmin 6vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-35), var(--z-35)) 10vmin 6vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-7), var(--z-7)) 12vmin 6vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-8), var(--z-8)) 14vmin 6vmin / 2vmin 2vmin,
 
-    linear-gradient(var(--z-31), var(--z-31)) 0vmin 12vmin / 2vmin 2vmin,
-    linear-gradient(var(--z-32), var(--z-32)) 2vmin 12vmin / 2vmin 2vmin,
-    linear-gradient(var(--z-33), var(--z-33)) 4vmin 12vmin / 2vmin 2vmin,
-    linear-gradient(var(--z-34), var(--z-34)) 6vmin 12vmin / 4vmin 2vmin,
-    linear-gradient(var(--z-35), var(--z-35)) 10vmin 12vmin / 2vmin 2vmin,
-    linear-gradient(var(--z-36), var(--z-36)) 12vmin 12vmin / 2vmin 2vmin,
-    linear-gradient(var(--z-33), var(--z-33)) 14vmin 12vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-4), var(--z-4)) 0 8vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-40), var(--z-40)) 2vmin 8vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-35), var(--z-35)) 4vmin 8vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-38), var(--z-38)) 6vmin 8vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-33), var(--z-33)) 8vmin 8vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-1), var(--z-1)) 10vmin 8vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-37), var(--z-37)) 12vmin 8vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-8), var(--z-8)) 14vmin 8vmin / 2vmin 2vmin,
 
-    linear-gradient(var(--z-37), var(--z-37)) 0vmin 14vmin / 2vmin 2vmin,
-    linear-gradient(var(--z-38), var(--z-38)) 2vmin 14vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-4), var(--z-4)) 0 10vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-40), var(--z-40)) 2vmin 10vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-35), var(--z-35)) 4vmin 10vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-38), var(--z-38)) 6vmin 10vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-33), var(--z-33)) 8vmin 10vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-1), var(--z-1)) 10vmin 10vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-37), var(--z-37)) 12vmin 10vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-8), var(--z-8)) 14vmin 10vmin / 2vmin 2vmin,
+
+    linear-gradient(var(--z-4), var(--z-4)) 0 12vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-40), var(--z-40)) 2vmin 12vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-35), var(--z-35)) 4vmin 12vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-38), var(--z-38)) 6vmin 12vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-33), var(--z-33)) 8vmin 12vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-40), var(--z-40)) 10vmin 12vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-37), var(--z-37)) 12vmin 12vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-32), var(--z-32)) 14vmin 12vmin / 2vmin 2vmin,
+
+    linear-gradient(var(--z-4), var(--z-4)) 0 14vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-40), var(--z-40)) 2vmin 14vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-35), var(--z-35)) 4vmin 14vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-38), var(--z-38)) 6vmin 14vmin / 2vmin 2vmin,
     linear-gradient(var(--z-33), var(--z-33)) 8vmin 14vmin / 2vmin 2vmin,
-    linear-gradient(var(--z-35), var(--z-35)) 4vmin 14vmin / 8vmin 2vmin,
-    linear-gradient(var(--z-39), var(--z-39)) 12vmin 14vmin / 2vmin 2vmin,
-  linear-gradient(var(--z-40), var(--z-40)) 14vmin 14vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-34), var(--z-34)) 10vmin 14vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-37), var(--z-37)) 12vmin 14vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-38), var(--z-38)) 14vmin 14vmin / 2vmin 2vmin,
+    var(--z-5)
 
-    var(--z-2)
+  --zombie-fist linear-gradient(var(--z-6), var(--z-6)) 0 0 / 2vmin 4vmin,
+    linear-gradient(var(--z-6), var(--z-6)) 2vmin 4vmin / 2vmin 4vmin,
+    linear-gradient(var(--z-6), var(--z-6)) 4vmin 0 / 2vmin 4vmin,
+    linear-gradient(var(--z-6), var(--z-6)) 6vmin 4vmin / 2vmin 4vmin,
+    var(--z-42)
+
+  --zombie-arm-top linear-gradient(var(--s-2), var(--s-2)) 0 0 / 2vmin 2vmin,
+    linear-gradient(var(--s-2), var(--s-2)) 6vmin 0 / 2vmin 2vmin,
+    linear-gradient(var(--s-3), var(--s-3)) 0 2vmin / 2vmin 2vmin,
+    linear-gradient(var(--s-3), var(--s-3)) 4vmin 0 / 2vmin 4vmin,
+    linear-gradient(var(--s-2), var(--s-2)) 0 6vmin / 2vmin 2vmin,
+    linear-gradient(var(--s-2), var(--s-2)) 6vmin 6vmin / 2vmin 2vmin,
+    linear-gradient(var(--s-1), var(--s-1)) 0 0 / 8vmin 8vmin,
+    linear-gradient(var(--z-24), var(--z-24)) 0 12vmin / 2vmin 6vmin,
+    linear-gradient(var(--z-24), var(--z-24)) 4vmin 10vmin / 2vmin 4vmin,
+    linear-gradient(var(--z-24), var(--z-24)) 6vmin 22vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-24), var(--z-24)) 0vmin 22vmin / 4vmin 2vmin,
+    linear-gradient(var(--z-24), var(--z-24)) 2vmin 20vmin / 2vmin 4vmin,
+    var(--z-23)
+
+  --zombie-arm-right linear-gradient(var(--s-5), var(--s-5)) 6vmin 2vmin / 2vmin 2vmin,
+    linear-gradient(var(--s-5), var(--s-5)) 2vmin 2vmin / 4vmin 6vmin,
+    linear-gradient(var(--s-2), var(--s-2)) 0 0 / 8vmin 8vmin,
+    linear-gradient(var(--z-7), var(--z-7)) 0 8vmin / 2vmin 6vmin,
+    linear-gradient(var(--z-7), var(--z-7)) 2vmin 16vmin / 2vmin 6vmin,
+    linear-gradient(var(--z-7), var(--z-7)) 6vmin 12vmin / 2vmin 6vmin,
+    var(--z-8)
+
+  --zombie-arm-inside linear-gradient(var(--s-5), var(--s-5)) 6vmin 2vmin / 2vmin 2vmin,
+    linear-gradient(var(--s-5), var(--s-5)) 2vmin 2vmin / 4vmin 6vmin,
+    linear-gradient(var(--s-2), var(--s-2)) 0 0 / 8vmin 8vmin,
+    linear-gradient(var(--z-42), var(--z-42)) 0 20vmin / 2vmin 4vmin,
+    linear-gradient(var(--z-42), var(--z-42)) 4vmin 20vmin / 2vmin 2vmin,
+    linear-gradient(var(--z-42), var(--z-42)) 6vmin 14vmin / 2vmin 4vmin,
+    linear-gradient(var(--z-42), var(--z-42)) 2vmin 10vmin / 2vmin 6vmin,
+    var(--z-27)
 
 .scene
   position fixed
@@ -239,7 +336,7 @@ body
 .zombie
   height var(--height)
   width var(--width)
-  background hsla(10, 80%, 70%, 0.5)
+  // background hsla(10, 80%, 70%, 0.5)
   position relative
 
   & > *
@@ -309,15 +406,35 @@ body
       background-repeat no-repeat
       background-color var(--shirt-one)
     &:nth-of-type(2)
-      background blue
-    &:nth-of-type(3)
-      background orange
+      background var(--zombie-arm-right)
+      background-repeat no-repeat
+    &:nth-of-type(3):after
+      content ''
+      height 100%
+      width 100%
+      position absolute
+      background var(--zombie-fist)
+      background-repeat no-repeat
     &:nth-of-type(4)
-      background pink
+      background var(--zombie-arm-inside)
+      background-repeat no-repeat
+
     &:nth-of-type(5)
-      background yellow
+      background var(--zombie-arm-top)
+      background-repeat no-repeat
     &:nth-of-type(6)
       background green
+
+.cuboid-arm--left div:nth-of-type(4)
+  background var(--zombie-arm-right)
+  background-repeat no-repeat
+
+.cuboid-arm--left div:nth-of-type(2)
+  background var(--zombie-arm-inside)
+  background-repeat no-repeat
+
+.cuboid-arm--left div:nth-of-type(3):after
+  transform rotateY(180deg) translate3d(0, 0, 1px)
 
 .cuboid-head
   --thickness 16
@@ -329,9 +446,27 @@ body
       background var(--zombie-face)
       background-repeat no-repeat
 
-  &:nth-of-type(5)
-      background var(--zombie-face)
+    &:nth-of-type(1)
+      background var(--zombie-crown)
       background-repeat no-repeat
+
+    // Left
+    &:nth-of-type(2)
+    &:nth-of-type(4)
+      background var(--zombie-ear)
+      background-repeat no-repeat
+
+    // Back
+    &:nth-of-type(6)
+      background var(--zombie-crown)
+      background-repeat no-repeat
+
+    // Bottom
+    &:nth-of-type(3)
+      background var(--zombie-crown)
+      background-repeat no-repeat
+
+
 
 .cuboid-torso
   --thickness 8
