--- a/src/magic-lamp/index.pug
+++ b/src/magic-lamp/index.pug
@@ -8,4 +8,7 @@ html
     link(rel='stylesheet', href='style.css')
   body
     include dev.pug
+    script(src='./gsap.min.js')
+    script(src='./MorphSVGPlugin.min.js')
+    script(src='./Draggable.min.js')
     script(type="module" src="script.js")
